# WatchDawg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci-api.yml  ci-web.yml  deploy-api.yml  deploy-web.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/src/watchdawg_api/: __init__.py  config.py  db.py  deps.py  logging_config.py  main.py
apps/api/src/watchdawg_api/middleware/: __init__.py  request_id.py  security_headers.py
apps/api/src/watchdawg_api/models/: __init__.py
apps/api/src/watchdawg_api/routes/: events.py  health.py
apps/api/src/watchdawg_api/services/: __init__.py
apps/api/tests/: conftest.py  test_events.py  test_health.py  test_security_headers.py
apps/web/: .env.example  eslint.config.mjs  middleware.ts  next.config.ts  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/__tests__/: classification-banner.test.tsx  dashboard-shell.test.tsx  login-form.test.tsx  status-store.test.ts  watchdawg-map.test.tsx
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/(dashboard)/: actions.ts  layout.tsx  page.tsx
apps/web/app/(dashboard)/dashboard/: page.tsx
apps/web/app/api/intel/events/: route.ts
apps/web/app/api/intel/feed/: route.ts
apps/web/app/api/intel/pulse/: route.ts
apps/web/app/api/intel/situation/: route.ts
apps/web/app/auth/callback/: route.ts
apps/web/app/login/: actions.ts  login-form.tsx  page.tsx
apps/web/components/: classification-banner.tsx  timeline-strip.tsx  topbar.tsx
apps/web/components/gotham/: alert-ticker.tsx  boot-sequence.tsx  command-center.tsx  dossier-panel.tsx  hud-overlay.tsx  intel-map.tsx  theater-switcher.tsx  watchlist-panel.tsx
apps/web/components/map/: focus-region.ts  map-loader.tsx  watchdawg-map-dynamic.tsx  watchdawg-map.tsx
apps/web/components/nav/: left-nav.tsx
apps/web/components/panel/: detail-panel.tsx
apps/web/components/status/: health-poller.tsx  live-status-pill.tsx  status-pill.tsx
apps/web/components/timeline/: timeline-strip.tsx
apps/web/components/ui/: button.tsx  input.tsx  label.tsx
apps/web/lib/: api.ts  utils.ts
apps/web/lib/intel/: cache.ts  client.ts  derive.ts  geo.ts  nations.ts  seed.ts  theaters.ts  types.ts
apps/web/lib/intel/sources/: acled.ts  gdelt.ts  reliefweb.ts
apps/web/lib/store/: status-store.ts
apps/web/lib/supabase/: client.ts  env.ts  middleware.ts  proxy.ts  server.ts
apps/web/public/geo/: focus-nations.geojson
apps/web/scripts/: build-borders.mjs
docs/: ARCHITECTURE.md
infra/gcp/: WIF_SETUP.md
infra/supabase/: README.md
infra/supabase/migrations/: 0001_init.sql
supabase/: README.md  config.toml
supabase/migrations/: 20260419000001_init.sql
