[project]
name = "watchdawg-api"
version = "0.1.0"
description = "WatchDawg maritime OSINT API."
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
readme = "README.md"

# Phase 1 runtime footprint. Heavy scientific / ML deps (anthropic,
# shapely, geopandas, pandas, numpy, scikit-learn, prophet, tenacity)
# land in the phase that first imports them. Pre-installing unused
# packages trains the wrong instinct — see CONTRIBUTING.md.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "supabase>=2.8",
    "httpx>=0.27",
    "orjson>=3.10",
    "structlog>=24.4",
    "sentry-sdk[fastapi]>=2.0",
    "slowapi>=0.1.9",
    "pyjwt[crypto]>=2.9",
    "python-dotenv>=1.0",
    "gunicorn>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
    "mypy>=1.13",
    "freezegun>=1.5",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchdawg_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle, pyflakes
    "B",                # bugbear
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "S",                # bandit
    "C4",               # comprehensions
    "T20",              # print detection
    "SIM",              # simplify
]
ignore = [
    "E501",  # line length is enforced by the formatter
    "S101",  # pytest uses assert
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
warn_unreachable = true
no_implicit_reexport = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["supabase.*", "gotrue.*", "postgrest.*", "slowapi.*", "jwt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --cov=watchdawg_api --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/watchdawg_api"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
