[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchdawg-api"
version = "0.1.0"
description = "WatchDawg backend — OSINT maritime security dashboard"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "WatchDawg" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "gunicorn>=23.0",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "supabase>=2.8",
  "python-dotenv>=1.0",
  "anthropic>=0.40",
  "orjson>=3.10",
  "structlog>=24.4",
  "tenacity>=9.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
# Phase 2+ data/ML stack — split out so Phase 1 image stays small.
data = [
  "shapely>=2.0",
  "geopandas>=1.0",
  "pandas>=2.2",
  "numpy>=2.1",
  "scikit-learn>=1.5",
  "prophet>=1.1.6",
  "websockets>=13.1",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
  "httpx[cli]>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
